# oauth-labs

./: .gitignore
client/: .env.example  index.html  package-lock.json  package.json
client/src/: App.vue  main.ts
client/src/common/enum/: auth.ts  endpoints.ts  env.ts  routes.ts  urls.ts
client/src/common/icons/: index.ts
client/src/common/interface/: auth.ts
client/src/common/utils/oauth2/: index.ts
client/src/components/common/: ButtonComp.vue  HomeButtonComp.vue  InputComp.vue  LinkComp.vue  SpinnerComp.vue
client/src/components/main/: HeaderComp.vue
client/src/components/oauth2/: Auth0Button.vue
client/src/router/: index.ts
client/src/service/: auth.ts  index.ts
client/src/stores/: UserStore.ts  userStore.ts
client/src/views/: HomeView.vue  OAuth2View.vue  SignInView.vue  SignUpView.vue
server/: .gitignore  Cargo.toml  README.md  public.pem
server/.cargo/: config.toml.example
server/src/: config.rs  cors.rs  main.rs
server/src/controller/: auth_controller.rs  main_controller.rs  mod.rs  user_controller.rs
server/src/service/: auth_service.rs  jwt_service.rs  mod.rs  oauth2_service.rs  oauth_service.rs
server/static/: index.html
